<resources>
    <string name="app_name">Habit Tracker</string>

    <!-- menu -->
    <string name="add_habit">Add habit</string>
    <string name="export_habit">Export habits</string>
    <string name="import_habit">Import habits</string>
    <string name="remove_all_habits">Remove all habits</string>

    <!-- common -->
    <string name="action_move">Move</string>
    <string name="action_modify">Modify</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>

    <string name="check_delete">Want to delete?</string>
    <string name="check_cancel">Want to cancel?</string>
    <string name="move_habit">Please move habit</string>

    <!-- habit -->
    <string name="habit_today">today</string>
    <string name="habit_day_ago">\nday\nago</string>
    <string name="habit_days_ago">\ndays\nago</string>

    <!-- add habit -->
    <string name="input_habit_name">Enter habit name</string>
    <string name="select_background_color">Select color</string>
    <string name="cancel_habit">Cancel</string>
    <string name="confirm_habit">Confirm</string>

    <!-- import habit -->
    <string name="get_habits_info">Get habits info</string>
    <string name="input_habits_info">Input exported habits info</string>
    <string name="select_remove_habit">Delete the habit you want to delete by pressing</string>
    <string name="delete_import_habit">Are you sure you want to delete?</string>
    <string name="get_habits">Please get habits</string>
    <string name="incorrect_habit_info">Incorrect habits information</string>

    <!-- config habit -->
    <string name="select_habit">Select habit</string>
    <string name="check_habit_name">Is this right?</string>
</resources>
